[package]
edition = "2021"
name = "docker-databases"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
serde = "1.0.188"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
features = ["tokio-runtime"]
version = "2.8.2"
